--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -3,6 +3,7 @@ html
   head
     link(rel="stylesheet" href="main.css")
 
+    script(src="lib/util.js")
     script(src="lib/typed.js")
   body
     != yield
