--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -1,6 +1,8 @@
 doctype
 html
   head
+    meta(name="viewport" content="width=device-width; initial-scale=1.0;")
+
     link(rel="stylesheet" href="main.css")
 
     script(src="lib/util.js")
